Style fixes, primarily buttons on smaller screen widths.

--- a/css/site.css
+++ b/css/site.css
@@ -104,7 +104,7 @@ p {
 }
 
 .calltoaction p {
-    height: 130px;
+    height: 150px;
 }
 
 .sec1 p {
@@ -192,7 +192,6 @@ a, a:active, a:visited {
 
 
     border:4px solid #F4F3EF;
-    min-width: 268px;
 
     display:inline-block;
     color:#BDB909;
